--- a/index.html
+++ b/index.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
 <body>
-    
+<html lang="eng">
+<header>
+<nav class = "menu">
+<ul>
+    <li><a href="#"><h2>Web Studio</h2></a></li>
+    <li><a href="#">Студія</a></li>
+    <li><a href="#">Портфоліо</a></li>
+    <li><a href="#">Контакти</a></li>
+  
+</ul>
+</nav>
+  <li><a href="#">info@devstudio.com</a></li>
+    <li><a href="#">+3809611111</a></li>
+</header>
+<main>
+<h1> Ефективні рішення для вашого бізнесу</h1>
+<button> Замовити послугу</button>
+
+<ul>
+<li>
+ <h3>Увага до деталей</h3>   
+ <p>
+    Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+</p>
+</li>
+<li>
+    <h3>Пунктуальність</h3>  
+    <p>
+        Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+</li>
+<li>
+    <h3>Планування</h3> 
+    <p>
+        Так само консультація з широким активом значною мірою зумовлює.
+</p>
+</li>
+<li>
+    <h3>Сучасні технології</h3> 
+    <p>
+        Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+</p>
+</li>
+</ul>
+    <h2>
+       Чим ми займаємось 
+    </h2>
+    <ul>
+        <li><img src="D:\!IT\Лаба 1\images\img-4.jpg" width="324" ></li>
+        <li><img src="D:\!IT\Лаба 1\images\img-5.jpg" width="324" ></li>
+        <li><img src="D:\!IT\Лаба 1\images\img-6.jpg" width="324" ></li>
+    </ul>
+</main>
+<h2> Наша команда</h2>
+<div>
+    <ul>
+        <li>
+            <img src="D:\!IT\Лаба 1\images\img.jpg" width="324" >
+            <h3>Ігор Дем'яненко</h3>
+            Product Designer
+        </li>
+        <li>
+            <img src="D:\!IT\Лаба 1\images\img-1.jpg" width="324" >
+            <h3>Ольга Рєпіна</h3>
+            Frontend Developer
+        </li>
+        <li>
+            <img src="D:\!IT\Лаба 1\images\img-2.jpg" width="324" >
+            <h3>Микола Тарасов</h3>
+            Marketing
+        </li>
+        <li>
+            <img src="D:\!IT\Лаба 1\images\img-3.jpg" width="324" >
+            <h3>Михайло Єрмаков</h3>
+            UI Designer
+        </li>
+
+    </ul>
+</div>
+<footer>
+ <a href="/">WebStudio</a>
+<address>
+    <p>м.Київ, вул.Лесі Українки, 26</p>
+    <p>info@devstudio.com</p>
+    <p>+3809611111</p>
+</address>
+</footer>
 </body>
 </html>
