Pending changes, validate HTML structure

--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
+
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
-<html lang="eng">
 <header>
+   <a href="#">Web Studio</a>
 <nav class = "menu">
 <ul>
-    <li><a href="#"><h2>Web Studio</h2></a></li>
     <li><a href="#">Студія</a></li>
     <li><a href="#">Портфоліо</a></li>
     <li><a href="#">Контакти</a></li>
-  
 </ul>
 </nav>
-  <li><a href="#">info@devstudio.com</a></li>
-    <li><a href="#">+3809611111</a></li>
+<ul>
+  <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li><a href="tel:+3809611111">+3809611111</a></li>
+</ul>
 </header>
 <main>
+    <section>
 <h1> Ефективні рішення для вашого бізнесу</h1>
 <button> Замовити послугу</button>
-
-<ul>
+    </section>
+    <section>
+    <ul>
 <li>
  <h3>Увага до деталей</h3>   
  <p>
@@ -43,47 +52,51 @@
 </p>
 </li>
 </ul>
+</section>
+<section>
     <h2>
        Чим ми займаємось 
     </h2>
     <ul>
-        <li><img src="D:\!IT\Лаба 1\images\img-4.jpg" width="324" ></li>
-        <li><img src="D:\!IT\Лаба 1\images\img-5.jpg" width="324" ></li>
-        <li><img src="D:\!IT\Лаба 1\images\img-6.jpg" width="324" ></li>
+        <li><img src="images/img-4.jpg" width="324" alt = "Що ми робимо 1"></li>
+        <li><img src="images/img-5.jpg" width="324" alt = "Що ми робимо 2" ></li>
+        <li><img src="images/img-6.jpg" width="324" alt = "Що ми робимо 2"></li>
     </ul>
-</main>
+</section>
+<section>
 <h2> Наша команда</h2>
 <div>
     <ul>
         <li>
-            <img src="D:\!IT\Лаба 1\images\img.jpg" width="324" >
+            <img src="images/img.jpg" width="324" alt = "Ігор Дем'яенко" >
             <h3>Ігор Дем'яненко</h3>
-            Product Designer
+            <p>Product Designer</p>
         </li>
         <li>
-            <img src="D:\!IT\Лаба 1\images\img-1.jpg" width="324" >
+            <img src="images/img-1.jpg" width="324" alt = "Ольга Рєпіна" >
             <h3>Ольга Рєпіна</h3>
-            Frontend Developer
+            <p>Developer</p> 
         </li>
         <li>
-            <img src="D:\!IT\Лаба 1\images\img-2.jpg" width="324" >
+            <img src="images/img-2.jpg" width="324" alt = "Микола Тарасов">
             <h3>Микола Тарасов</h3>
-            Marketing
+            <p>Marketing</p>
         </li>
         <li>
-            <img src="D:\!IT\Лаба 1\images\img-3.jpg" width="324" >
+            <img src="images/img-3.jpg" width="324" alt = "Михайло Єрмаков" >
             <h3>Михайло Єрмаков</h3>
-            UI Designer
+            <p>UI Designer</p>
         </li>
-
     </ul>
 </div>
+</section>
+</main>
 <footer>
  <a href="/">WebStudio</a>
 <address>
     <p>м.Київ, вул.Лесі Українки, 26</p>
-    <p>info@devstudio.com</p>
-    <p>+3809611111</p>
+    <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+    <p><a href="tel:+3809611111">+3809611111</a></p>
 </address>
 </footer>
 </body>
