Adding Button class = Button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 <header>
    <a href="#">Web Studio</a>
@@ -24,7 +25,7 @@
 <main>
     <section>
 <h1> Ефективні рішення для вашого бізнесу</h1>
-<button> Замовити послугу</button>
+<button class = button> Замовити послугу</button>
     </section>
     <section>
     <ul>
@@ -60,7 +61,7 @@
     <ul>
         <li><img src="images/img-4.jpg" width="324" alt = "Що ми робимо 1"></li>
         <li><img src="images/img-5.jpg" width="324" alt = "Що ми робимо 2" ></li>
-        <li><img src="images/img-6.jpg" width="324" alt = "Що ми робимо 2"></li>
+        <li><img src="images/img-6.jpg" width="324" alt = "Що ми робимо 3"></li>
     </ul>
 </section>
 <section>
