--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <header>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <a  href="index.html" class="headerLogo"><span class="BlueLogo">Web</span>Studio</a>
+        <a  href="#" class="headerLogo"><span class="BlueLogo">Web</span>Studio</a>
         <nav class="menu">
             <ul>
-                <li><a class = "NavigationMenu" href="#">Студія</a></li>
+                <li><a class = "active" href="index.html">Студія</a></li>
                 <li><a class = "NavigationMenu" href="portfolio.html">Портфоліо</a></li>
                 <li><a class = "NavigationMenu" href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul>
-            <li><a class = "NavigationMenu" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class = "NavigationMenu" href="tel:+3809611111">+3809611111</a></li>
+            <li><a class = "header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class = "header-contact" href="tel:+3809611111">+3809611111</a></li>
         </ul>
     </header>
     <main>
@@ -70,26 +70,34 @@
         <section>
             <h2 class = "sectiontitle"> Наша команда</h2>
             <ul>
+                <a href="#" >
                 <li>
                     <img src="images/img.jpg" width="324" alt="Ігор Дем'яенко">
                     <h3 class="programmers">Ігор Дем'яненко</h3>
                     <p class="work">Product Designer</p>
                 </li>
+            </a>
+            <a href="">
                 <li>
                     <img src="images/img-1.jpg" width="324" alt="Ольга Рєпіна">
                     <h3 class="programmers">Ольга Рєпіна</h3>
                     <p class="work">Developer</p>
                 </li>
+            </a>
+                <a href="#">
                 <li>
                     <img src="images/img-2.jpg" width="324" alt="Микола Тарасов">
                     <h3 class="programmers">Микола Тарасов</h3>
                     <p class="work">Marketing</p>
                 </li>
+            </a>
+            <a href="#">
                 <li>
                     <img src="images/img-3.jpg" width="324" alt="Михайло Єрмаков">
                     <h3 class="programmers">Михайло Єрмаков</h3>
                     <p class="work">UI Designer</p>
                 </li>
+            </a>
             </ul>
         </section>
     </main>
@@ -97,8 +105,8 @@
         <a class = "footerLogo" href="index.html" ><span class="BlueLogo">Web</span>Studio</a>
         <address>
             <p class = "adress">м.Київ, вул.Лесі Українки, 26</p>
-            <p><a class = "Navigation" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a  class = "Navigation" href="tel:+3809611111">+3809611111</a></p>
+            <p><a class = "footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p><a  class = "footer-contact" href="tel:+3809611111">+3809611111</a></p>
         </address>
     </footer>
 </body>
