Adding text structure in CSS

--- a/index.html
+++ b/index.html
@@ -19,36 +19,36 @@
                 <li><a class = "NavigationMenu" href="#">Контакти</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="adress-block">
             <li><a class = "header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class = "header-contact" href="tel:+3809611111">+3809611111</a></li>
         </ul>
     </header>
     <main>
         <section class="title">
-            <h1 class="solutionsForBuisness"> Ефективні рішення для вашого бізнесу</h1>
+            <h1 class="solutions-for-buisness"> Ефективні рішення для вашого бізнесу</h1>
             <button type = button class="HeroButton"> Замовити послугу</button>
         </section>
         <section>
             <ul>
-                <li>
+                <li class = "class-benefits">
                     <h3 class = "benefits">Увага до деталей</h3>
                     <p class = "Description">
                         Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                     </p>
                 </li>
-                <li>
+                <li class = "class-benefits">
                     <h3 class = "benefits">Пунктуальність</h3>
                     <p class = "Description">
                         Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                 </li>
-                <li>
+                <li class = "class-benefits">
                     <h3 class = "benefits">Планування</h3>
                     <p class = "Description">
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
-                <li>
+                <li class = "class-benefits">
                     <h3 class = "benefits">Сучасні технології</h3>
                     <p class = "Description">
                         Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -62,47 +62,47 @@
             </h2>
             <ul>
 
-                <li><img src="images/img-4.jpg" width="324" alt="Програмування"></li>
-                <li><img src="images/img-5.jpg" width="324" alt="UI/UX розробка"></li>
-                <li><img src="images/img-6.jpg" width="324" alt="Дизайн"></li>
+                <li class = "first-image"><img src="images/img-4.jpg" width="324"  alt="Програмування"></li>
+                <li class = "work-results"><img src="images/img-5.jpg" width="324"  alt="UI/UX розробка"></li>
+                <li class = "work-results"><img src="images/img-6.jpg" width="324"  alt="Дизайн"></li>
             </ul>
         </section>
-        <section>
+        <section class = team>
             <h2 class = "sectiontitle"> Наша команда</h2>
             <ul>
-                <a href="#" >
-                <li>
-                    <img src="images/img.jpg" width="324" alt="Ігор Дем'яенко">
+                <li class = "first-programmer">
+                    <a href="#" >
+                    <img src="images/img.jpg" width="200" alt="Ігор Дем'яенко">
                     <h3 class="programmers">Ігор Дем'яненко</h3>
-                    <p class="work">Product Designer</p>
+                    <p class="work">Product Designer</p> 
+                </a>
                 </li>
-            </a>
-            <a href="">
-                <li>
-                    <img src="images/img-1.jpg" width="324" alt="Ольга Рєпіна">
+                <li class= "worker-card">
+                    <a href="">
+                    <img src="images/img-1.jpg" width="200" alt="Ольга Рєпіна">
                     <h3 class="programmers">Ольга Рєпіна</h3>
                     <p class="work">Developer</p>
-                </li>
-            </a>
-                <a href="#">
-                <li>
-                    <img src="images/img-2.jpg" width="324" alt="Микола Тарасов">
+                </a>
+                </li>     
+                <li class= "worker-card">
+                     <a href="#"> 
+                    <img src="images/img-2.jpg"  width="200"  alt="Микола Тарасов">
                     <h3 class="programmers">Микола Тарасов</h3>
                     <p class="work">Marketing</p>
+                </a>
                 </li>
-            </a>
-            <a href="#">
-                <li>
-                    <img src="images/img-3.jpg" width="324" alt="Михайло Єрмаков">
+                <li class= "worker-card"> 
+                    <a href="#">
+                    <img src="images/img-3.jpg"  width="200" alt="Михайло Єрмаков">
                     <h3 class="programmers">Михайло Єрмаков</h3>
                     <p class="work">UI Designer</p>
+                </a>
                 </li>
-            </a>
             </ul>
         </section>
     </main>
     <footer>
-        <a class = "footerLogo" href="index.html" ><span class="BlueLogo">Web</span>Studio</a>
+        <a class = "footerLogo" href="#" ><span class="BlueLogo">Web</span>Studio</a>
         <address>
             <p class = "adress">м.Київ, вул.Лесі Українки, 26</p>
             <p><a class = "footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
