--- a/portfolio.html
+++ b/portfolio.html
@@ -10,120 +10,136 @@
 
 <body>
     <header>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <a href="#" class="headerLogo"><span class="BlueLogo">Web</span>Studio</a>
-        <nav class="menu">
-            <ul>
-                <li><a class="NavigationMenu" href="index.html">Студія</a></li>
-                <li><a class="active" href="portfolio.html">Портфоліо</a></li>
-                <li><a class="NavigationMenu" href="#">Контакти</a></li>
-            </ul>
-        </nav>
-        <ul class = "adress-block">
-            <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-contact" href="tel:+3809611111">+3809611111</a></li>
-        </ul>
+            <div class="container">
+                <a  href="#" class="header-logo"><span class="BlueLogo">Web</span>Studio</a>
+                <nav class="menu">
+                    <ul>
+                        <li><a class = "NavigationMenu" href="index.html">Студія</a></li>
+                        <li><a class = "NavigationMenu active" href="portfolio.html">Портфоліо</a></li>
+                        <li><a class = "NavigationMenu" href="#">Контакти</a></li>
+                    </ul>
+                </nav>
+                <ul class="adress-block">
+                    <li><a class = "header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class = "header-contact" href="tel:+3809611111">+3809611111</a></li>
+                </ul>
+            </div>
     </header>
     <main>
-        <ul class = "buttons-div">
-            <li> <button type=button class="filter">
+        <ul class = "fliters-list">
+            <li class="filters-item"> <button type=button class="filters-item">
                     Усі
                 </button></li>
-            <li><button type=button class="filter">
+            <li class="filters-item"><button type=button class="filters-item">
                     Веб-сайти
                 </button></li>
-            <li><button type=button class="filter">
+            <li class="filters-item"><button type=button class="filters-item">
                     Додатки
                 </button></li>
-            <li><button type=button class="filter">
+            <li class="filters-item"><button type=button class="filters-item">
                     Дизайн
                 </button></li>
-            <li><button type=button class="filter">
+            <li class="filters-item"><button type=button class="filters-item">
                     Маркетинг
                 </button></li>
         </ul>
-        <section>
+        <section class = "projects-section">
             <ul class = "projects-list">
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg.jpg" alt="Технокряк" width="324" height="324">
-                        <h3 class="projectName">Технокряк</h3>
+                        
+                        <img src="images/img2pgimg.jpg" alt="Технокряк" width="370" height="294">
+                        <div class="projects-desc"><h3 class="projectName">Технокряк</h3>
                         <p class="projectType">Веб-сайт</p>
+                    </div>
                     </a>
                 </li>
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg-1.jpg" alt="Постер New Orlean vs Golden Star" width="324"
-                            height="324">
-                            <h3 class="projectName">Постер New Orlean vs Golden Star</h3>
+                        <img src="images/img2pgimg-1.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                            <div class="projects-desc"><h3 class="projectName">Постер New Orlean vs Golden Star</h3>
                             <p class="projectType">Дизайн</p>
+                        </div>
                         </a>
                 </li>
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg-2.jpg" alt="Ресторан Seafood" width="324" height="324">
+                        <img src="images/img2pgimg-2.jpg" alt="Ресторан Seafood" width="370" height="294">
+                        <div class="projects-desc">
                         <h3 class="projectName">Ресторан Seafood</h3>
                         <p class="projectType">Додаток</p>
+                    </div>
                     </a>
                 </li>
 
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg-3.jpg" alt="проект Прайм" width="324" height="324">
-                        <h3 class="projectName">Проєкт Prime</h3>
-                        <p class="projectType">Маркетинг</p>
+                        <img src="images/img2pgimg-3.jpg" alt="Проект Прайм" width="370" height="294">
+                        <div class="projects-desc"><h3 class="projectName">Проєкт Prime</h3>
+                        <p class="projectType">Маркетинг</p></div>
                     </a>
                 </li>
 
 
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg-4.jpg" alt="Проєкт Boxes" width="324" height="324">
+                        <img src="images/img2pgimg-4.jpg" alt="Проєкт Boxes" width="370" height="294">
                     </a>
+                    <div class="projects-desc">
                         <h3 class="projectName">Проєкт Boxes</h3>
                         <p class="projectType">Додаток</p>
+                    </div>
                 </li>
 
 
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg-5.jpg" alt="Inspiration has no Borders" width="324" height="324">
+                        <img src="images/img2pgimg-5.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                        <div class="projects-desc">
                         <h3 class="projectName">Inspiration has no Borders</h3>
                         <p class="projectType">Веб-сайт</p>
+                    </div>
                     </a>
                 </li>
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg-6.jpg" alt="Видання Limited Edition" width="324" height="324">
+                        <img src="images/img2pgimg-6.jpg" alt="Видання Limited Edition" width="370" height="294">
+                        <div class="projects-desc">
                         <h3 class="projectName">Видання Limited Edition</h3>
                         <p class="projectType">Дизайн</p>
+                    </div>
                     </a>
                 </li>
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg-7.jpg" alt="проєкт LAB" width="324" height="324">
+                        <img src="images/img2pgimg-7.jpg" alt="Проєкт LAB" width="370" height="294"><div class="projects-desc">         
                         <h3 class="projectName">проєкт LAB</h3>
                         <p class="projectType">Маркетинг</p>
+                    </div>  
                     </a>  
                 </li>
 
                 <li class="projects">
                     <a href="#">
-                        <img src="images/img2pgimg-8.jpg" alt="Growing Buisness" width="324" height="324">
+                        <img src="images/img2pgimg-8.jpg" alt="Growing Buisness" width="370" height="294">
+                        <div class="projects-desc">
                         <h3 class="projectName">Growing Buisness</h3>
                         <p class="projectType">Маркетинг</p>
+                    </div>
                     </a>
                 </li>
-
             </ul>
+
         </section>
     </main>
     <footer>
-        <a class="footerLogo" href="#"><span class="BlueLogo">Web</span>Studio</a>
-        <address>
-            <p class="adress">м.Київ, вул.Лесі Українки, 26</p>
-            <p><a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a class="footer-contact" href="tel:+3809611111">+3809611111</a></p>
-        </address>
+        <div class="container">
+            <a class = "footer-logo" href="#" ><span class="BlueLogo">Web</span>Studio</a>
+            <address class = "footer-contact-list">
+                <p class = "adress">м.Київ, вул.Лесі Українки, 26</p>
+                <p><a class = "footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+                <p><a class = "footer-contact" href="tel:+3809611111">+3809611111</a></p>
+            </address>
+        </div>
     </footer>
 </body>
