--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
                         </p>
                     </li>
                     <li class = "class-benefits">
-                        <h3 class = "benefits">Пунктуальність</h3>
+                        <h3 class="benefits-caption">Пунктуальність</h3>
                         <p class = "benefits-desc">
                             Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </li>
                     <li class = "class-benefits">
-                        <h3 class = "benefits">Планування</h3>
+                        <h3 class="benefits-caption">Планування</h3>
                         <p class = "benefits-desc">
                             Так само консультація з широким активом значною мірою зумовлює.
                         </p>
                     </li>
                     <li class = "class-benefits">
-                        <h3 class = "benefits">Сучасні технології</h3>
+                        <h3 class="benefits-caption">Сучасні технології</h3>
                         <p class = "benefits-desc">
                             Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                         </p>
@@ -119,8 +119,8 @@
         <a class = "footer-logo" href="#" ><span class="BlueLogo">Web</span>Studio</a>
         <address class = "footer-contact-list">
             <p class = "adress">м.Київ, вул.Лесі Українки, 26</p>
-            <p><a class = "footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a  class = "footer-contact" href="tel:+3809611111">+3809611111</a></p>
+            <p сlass="footer-contact"><a class = "footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p сlass="footer-contact"><a  class = "footer-contact" href="tel:+3809611111">+3809611111</a></p>
         </address>
     </div>
     </footer>
