--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
             </div>
     </header>
     <main>
+        <section class="filters-section">
         <ul class = "fliters-list">
             <li class="filters-item"> <button type=button class="filters-item">
                     Усі
@@ -43,11 +44,11 @@
                     Маркетинг
                 </button></li>
         </ul>
+    </section>
         <section class = "projects-section">
             <ul class = "projects-list">
                 <li class="projects">
-                    <a href="#">
-                        
+                    <a href="#">      
                         <img src="images/img2pgimg.jpg" alt="Технокряк" width="370" height="294">
                         <div class="projects-desc"><h3 class="projectName">Технокряк</h3>
                         <p class="projectType">Веб-сайт</p>
