--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
             <h2 class = "section-title"> Наша команда</h2>
             <ul class = "cards-list">
                 <li class = "worker-card">
-                    <a href="#" >
-                       
+                    <a class = "link" href="#" >
                     <img src="images/img.jpg" width="270" alt="Ігор Дем'яенко">
                      <div class="programmers-desc">
                     <h3 class="programmers-name">Ігор Дем'яненко</h3>
@@ -85,7 +84,7 @@
                 </a>
                 </li>
                 <li class= "worker-card">
-                    <a href="">
+                    <a class = "link" href="#">
                     <img src="images/img-1.jpg" width="270" alt="Ольга Рєпіна">
                     <div class="programmers-desc">
                     <h3 class="programmers-name">Ольга Рєпіна</h3>
@@ -94,7 +93,7 @@
                 </a>
                 </li>     
                 <li class= "worker-card">
-                     <a href="#"> 
+                     <a class = "link" href="#"> 
                     <img src="images/img-2.jpg"  width="270"  alt="Микола Тарасов">
                     <div class="programmers-desc">
                     <h3 class="programmers-name">Микола Тарасов</h3>
@@ -103,7 +102,7 @@
                 </a>
                 </li>
                 <li class= "worker-card"> 
-                    <a href="#">
+                    <a class = "link" href="#">
                     <img src="images/img-3.jpg"  width="270" alt="Михайло Єрмаков">
                     <div class="programmers-desc">
                     <h3 class="programmers-name">Михайло Єрмаков</h3>
@@ -119,8 +118,8 @@
         <a class = "footer-logo" href="#" ><span class="BlueLogo">Web</span>Studio</a>
         <address class = "footer-contact-list">
             <p class = "adress">м.Київ, вул.Лесі Українки, 26</p>
-            <p сlass="footer-contact"><a class = "footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p сlass="footer-contact"><a  class = "footer-contact" href="tel:+3809611111">+3809611111</a></p>
+            <p><a class = "footer-contact email" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p><a class = "footer-contact number" href="tel:+3809611111">+3809611111</a></p>
         </address>
     </div>
     </footer>
