--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>WebStudio</title>
 </head>
-
 <body>
     <header>
             <div class="container">
@@ -26,7 +25,8 @@
             </div>
     </header>
     <main>
-        <section class="filters-section">
+        <section class = "projects-section">
+       <div class="container">
         <ul class = "fliters-list">
             <li class="filters-item"> <button type=button class="filters-item">
                     Усі
@@ -44,11 +44,9 @@
                     Маркетинг
                 </button></li>
         </ul>
-    </section>
-        <section class = "projects-section">
             <ul class = "projects-list">
                 <li class="projects">
-                    <a href="#">      
+                    <a class = "link" href="#">      
                         <img src="images/img2pgimg.jpg" alt="Технокряк" width="370" height="294">
                         <div class="projects-desc"><h3 class="projectName">Технокряк</h3>
                         <p class="projectType">Веб-сайт</p>
@@ -56,7 +54,7 @@
                     </a>
                 </li>
                 <li class="projects">
-                    <a href="#">
+                    <a class = "link" href="#">
                         <img src="images/img2pgimg-1.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                             <div class="projects-desc"><h3 class="projectName">Постер New Orlean vs Golden Star</h3>
                             <p class="projectType">Дизайн</p>
@@ -64,7 +62,7 @@
                         </a>
                 </li>
                 <li class="projects">
-                    <a href="#">
+                    <a class = "link" href="#">
                         <img src="images/img2pgimg-2.jpg" alt="Ресторан Seafood" width="370" height="294">
                         <div class="projects-desc">
                         <h3 class="projectName">Ресторан Seafood</h3>
@@ -72,9 +70,8 @@
                     </div>
                     </a>
                 </li>
-
                 <li class="projects">
-                    <a href="#">
+                    <a class = "link" href="#">
                         <img src="images/img2pgimg-3.jpg" alt="Проект Прайм" width="370" height="294">
                         <div class="projects-desc"><h3 class="projectName">Проєкт Prime</h3>
                         <p class="projectType">Маркетинг</p></div>
@@ -83,7 +80,7 @@
 
 
                 <li class="projects">
-                    <a href="#">
+                    <a class = "link" href="#">
                         <img src="images/img2pgimg-4.jpg" alt="Проєкт Boxes" width="370" height="294">
                     </a>
                     <div class="projects-desc">
@@ -94,7 +91,7 @@
 
 
                 <li class="projects">
-                    <a href="#">
+                    <a class = "link" href="#">
                         <img src="images/img2pgimg-5.jpg" alt="Inspiration has no Borders" width="370" height="294">
                         <div class="projects-desc">
                         <h3 class="projectName">Inspiration has no Borders</h3>
@@ -103,7 +100,7 @@
                     </a>
                 </li>
                 <li class="projects">
-                    <a href="#">
+                    <a class = "link" href="#">
                         <img src="images/img2pgimg-6.jpg" alt="Видання Limited Edition" width="370" height="294">
                         <div class="projects-desc">
                         <h3 class="projectName">Видання Limited Edition</h3>
@@ -112,7 +109,7 @@
                     </a>
                 </li>
                 <li class="projects">
-                    <a href="#">
+                    <a class = "link" href="#">
                         <img src="images/img2pgimg-7.jpg" alt="Проєкт LAB" width="370" height="294"><div class="projects-desc">         
                         <h3 class="projectName">проєкт LAB</h3>
                         <p class="projectType">Маркетинг</p>
@@ -121,7 +118,7 @@
                 </li>
 
                 <li class="projects">
-                    <a href="#">
+                    <a class = "link" href="#">
                         <img src="images/img2pgimg-8.jpg" alt="Growing Buisness" width="370" height="294">
                         <div class="projects-desc">
                         <h3 class="projectName">Growing Buisness</h3>
@@ -130,6 +127,7 @@
                     </a>
                 </li>
             </ul>
+        </div>
 
         </section>
     </main>
@@ -137,9 +135,9 @@
         <div class="container">
             <a class = "footer-logo" href="#" ><span class="BlueLogo">Web</span>Studio</a>
             <address class = "footer-contact-list">
-                <p class = "adress">м.Київ, вул.Лесі Українки, 26</p>
-                <p><a class = "footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-                <p><a class = "footer-contact" href="tel:+3809611111">+3809611111</a></p>
+            <p class = "adress">м.Київ, вул.Лесі Українки, 26</p>
+            <p><a class = "footer-contact email" href="mailto:info@devstudio.com">info@devstudio.com</a></p>
+            <p><a class = "footer-contact number" href="tel:+3809611111">+3809611111</a></p>
             </address>
         </div>
     </footer>
