--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <ul class="adress-block">
                     <li class = "header-contact"><a class = "header-contact" href="mailto:info@devstudio.com">
                         <svg viewBox="0 0 39 32" class = "header-contact-logo" >
-                            <use xlink:href = "/images/icons.svg#icon-envelope-hover"/>
+                            <use xlink:href = "images/icons.svg#icon-envelope-hover"/>
                     </svg>info@devstudio.com</a></li>
                     <li class = "header-contact"><a class = "header-contact" href="tel:+3809611111">
                         <svg viewBox="0 0 39 32" class = "header-contact-logo">
-                            <use xlink:href = "/images/icons.svg#icon-smartphone"/>
+                            <use xlink:href = "images/icons.svg#icon-smartphone"/>
                     </svg>+3809611111</a></li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
                     <li class="benefits-item">
                         <div class="benefits-svg-div">
                         <svg  viewBox="0 0 70 70" class = "benefits-logo">
-                            <use xlink:href = "/images/icons.svg#icon-antenna-1benefits"/>
+                            <use xlink:href = "images/icons.svg#icon-antenna-1benefits"/>
                          </svg>
                         </div>
                         <h3 class="benefits-caption">Увага до деталей</h3>
@@ -58,7 +58,7 @@
                     <li class = "class-benefits">
                         <div class="benefits-svg-div">
                         <svg  viewBox="0 0 70 70" class = "benefits-logo">
-                            <use xlink:href = "/images/icons.svg#icon-clock-1benefits"/>
+                            <use xlink:href = "images/icons.svg#icon-clock-1benefits"/>
                          </svg>
                         </div>
                         <h3 class="benefits-caption">Пунктуальність</h3>
@@ -68,7 +68,7 @@
                     <li class = "class-benefits">
                         <div class="benefits-svg-div">
                         <svg  viewBox="0 0 70 70" class = "benefits-logo">
-                            <use xlink:href = "/images/icons.svg#icon-diagram-1benefits"/>
+                            <use xlink:href = "images/icons.svg#icon-diagram-1benefits"/>
                          </svg>
                         </div>
                         <h3 class="benefits-caption">Планування</h3>
@@ -80,7 +80,7 @@
                     <li class = "class-benefits">
                         <div class="benefits-svg-div">
                         <svg  viewBox="0 0 70 70" class = "benefits-logo">
-                            <use xlink:href = "/images/icons.svg#icon-astronaut-1benefits"/>
+                            <use xlink:href = "images/icons.svg#icon-astronaut-1benefits"/>
                          </svg>
                         </div>
                         <h3 class="benefits-caption">Сучасні технології</h3>
@@ -112,19 +112,19 @@
                     <div class="social-networks">
                         <a href="#">
                     <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                        <use xlink:href = "/images/icons.svg#icon-instagram"/>
+                        <use xlink:href = "images/icons.svg#icon-instagram"/>
                      </svg></a>
                      <a href="#">
                      <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                        <use xlink:href = "/images/icons.svg#icon-twitter"/>
+                        <use xlink:href = "images/icons.svg#icon-twitter"/>
                      </svg></a>
                      <a href="#">
                      <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                        <use xlink:href = "/images/icons.svg#icon-facebook"/>
+                        <use xlink:href = "images/icons.svg#icon-facebook"/>
                      </svg> </a>
                      <a href="#">
                      <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                        <use xlink:href = "/images/icons.svg#icon-linkedin2"/>
+                        <use xlink:href = "images/icons.svg#icon-linkedin2"/>
                      </svg></a>
                     </div>   
                 </div>
@@ -137,19 +137,19 @@
                     <div class="social-networks">
                         <a href="#">
                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-instagram"/>
+                            <use xlink:href = "images/icons.svg#icon-instagram"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-twitter"/>
+                            <use xlink:href = "images/icons.svg#icon-twitter"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-facebook"/>
+                            <use xlink:href = "images/icons.svg#icon-facebook"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-linkedin2"/>
+                            <use xlink:href = "images/icons.svg#icon-linkedin2"/>
                          </svg></a>
                         </div>
                         </div>
@@ -162,19 +162,19 @@
                     <div class="social-networks">
                         <a href="#">
                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-instagram"/>
+                            <use xlink:href = "images/icons.svg#icon-instagram"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-twitter"/>
+                            <use xlink:href = "images/icons.svg#icon-twitter"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-facebook"/>
+                            <use xlink:href = "images/icons.svg#icon-facebook"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-linkedin2"/>
+                            <use xlink:href = "images/icons.svg#icon-linkedin2"/>
                          </svg></a>
                         </div> 
                 </div>
@@ -188,19 +188,19 @@
                     <div class="social-networks">
                         <a href="#">
                         <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-instagram"/>
+                            <use xlink:href = "images/icons.svg#icon-instagram"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-twitter"/>
+                            <use xlink:href = "images/icons.svg#icon-twitter"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-facebook"/>
+                            <use xlink:href = "images/icons.svg#icon-facebook"/>
                          </svg></a>
                          <a href="#">
                          <svg  viewBox="0 0 64 32" class = "social-networks-logo">
-                            <use xlink:href = "/images/icons.svg#icon-linkedin2"/>
+                            <use xlink:href = "images/icons.svg#icon-linkedin2"/>
                          </svg></a>
                         </div>   
                 </div>
@@ -222,14 +222,14 @@
                     <li class="clients-item" >
                         <a href="#" class="clients-ref">
                         <svg viewBox="0 0 57 32" class = "clients-logo">
-                            <use xlink:href = "/images/icons.svg#icon-Logosprite-1"/>
+                            <use xlink:href = "images/icons.svg#icon-Logosprite-1"/>
                          </svg>
                         </a>
                     </li>
                     <li class="clients-item" >
                         <a href="#" class="clients-ref">
                         <svg viewBox="0 0 57 32" class = "clients-logo">
-                            <use xlink:href = "/images/icons.svg#icon-Logosprite-2"/>
+                            <use xlink:href = "images/icons.svg#icon-Logosprite-2"/>
                          </svg>
                         </a>
                     </li>
@@ -245,7 +245,7 @@
                     <li class="clients-item" >
                         <a href="#" class="clients-ref">
                         <svg viewBox="0 0 57 32" class = "clients-logo">
-                            <use xlink:href = "/images/icons.svg#icon-Logosprite-4"/>
+                            <use xlink:href = "images/icons.svg#icon-Logosprite-4"/>
                          </svg>
                          </a>
                     </li>
@@ -253,7 +253,7 @@
                     <li class="clients-item" >
                         <a href="#" class="clients-ref">
                         <svg viewBox="0 0 57 32" class="clients-logo">
-                            <use xlink:href = "/images/icons.svg#icon-Logosprite-5"/>
+                            <use xlink:href = "images/icons.svg#icon-Logosprite-5"/>
                          </svg>
                          </a>
                     </li>
@@ -280,14 +280,14 @@
         <li class="footer-logo-item">
             <a href="#">
             <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "/images/icons.svg#icon-instagram"/>
+            <use xlink:href = "images/icons.svg#icon-instagram"/>
          </svg>
         </a>
         </li>
         <li class="footer-logo-item">
             <a href="#">
          <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "/images/icons.svg#icon-twitter"/>
+            <use xlink:href = "images/icons.svg#icon-twitter"/>
          </svg>
         </a>
         </li>
@@ -295,7 +295,7 @@
         <li class="footer-logo-item">
             <a href="#">
          <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "/images/icons.svg#icon-facebook"/>
+            <use xlink:href = "images/icons.svg#icon-facebook"/>
          </svg>
         </a>
         </li>
@@ -303,7 +303,7 @@
         <li class="footer-logo-item">
         <a href="#">
          <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "/images/icons.svg#icon-linkedin2"/>
+            <use xlink:href = "images/icons.svg#icon-linkedin2"/>
          </svg>
         </a>
         </li>
