--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,11 @@
             <ul class="adress-block">
                 <li class = "header-contact"><a class = "header-contact" href="mailto:info@devstudio.com">
                     <svg viewBox="0 0 39 32" class = "header-contact-logo" >
-                        <use xlink:href = "/images/icons.svg#icon-envelope-hover"/>
+                        <use xlink:href = "images/icons.svg#icon-envelope-hover"/>
                 </svg>info@devstudio.com</a></li>
                 <li class = "header-contact"><a class = "header-contact" href="tel:+3809611111">
                     <svg viewBox="0 0 39 32" class = "header-contact-logo">
-                        <use xlink:href = "/images/icons.svg#icon-smartphone"/>
+                        <use xlink:href = "images/icons.svg#icon-smartphone"/>
                 </svg>+3809611111</a></li>
             </ul>
         </div>
@@ -154,22 +154,22 @@
         <h3 class="social-networks-title">приєднуйтесь</h3>
         <ul class="footer-logo-list">
         <li class="footer-logo-item"><svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "/images/icons.svg#icon-instagram"/>
+            <use xlink:href = "images/icons.svg#icon-instagram"/>
          </svg>
         </li>
         <li class="footer-logo-item">
          <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "/images/icons.svg#icon-twitter"/>
+            <use xlink:href = "images/icons.svg#icon-twitter"/>
          </svg>
         </li>
         <li class="footer-logo-item">
          <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "/images/icons.svg#icon-facebook"/>
+            <use xlink:href = "images/icons.svg#icon-facebook"/>
          </svg>
         </li>
         <li class="footer-logo-item">
          <svg  viewBox="0 0 88 44" class = "footer-social-networks-logo">
-            <use xlink:href = "/images/icons.svg#icon-linkedin2"/>
+            <use xlink:href = "images/icons.svg#icon-linkedin2"/>
          </svg>
         </li>
         </ul>
