lab-4(finally all imgs)

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <li class="clients-item">
                         <a href="#" class="clients-ref">
                      <svg viewBox="0 0 106 60" class = "clients-logo">
-                        <use xlink:href = "/images/icons.svg#ya-co"/>
+                        <use xlink:href = "images/icons.svg#ya-co"/>
                      </svg>
                     </a>
                     </li>
@@ -237,7 +237,7 @@
                     <li class="clients-item" >
                         <a href="#" class="clients-ref">
                         <svg  viewBox="0 0 57 32" class = "clients-logo">
-                            <use xlink:href = "/images/icons.svg#icon-Logosprite-3"/>
+                            <use xlink:href = "images/icons.svg#icon-Logosprite-3"/>
                          </svg>
                         </a>
                     </li>
